tests/codegen/errors/reader/collections-refinements/atom.reader.error.reader.refinement.missing.pipe/reader-refinement-missing-pipe.mon
;; TEST-ID: tests.codegen.reader-error.reader-refinement-missing-pipe
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/collections-refinements
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected '|' after base type
;; TEST-ATOM: atom.reader.error.reader.refinement.missing.pipe
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.refinement.missing.pipe
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected '|' after base type
;; TEST-READER-PATH: reader.c:6360 parser.refinement
;; TEST-CODEGEN-PATH: diagnostic.parser.refinement
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:6360 Expected '|' after base type
;; TEST-USES-ATOM: atom.reader.error.reader.refinement.missing.pipe
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.refinement
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/collections-refinements/atom.reader.error.reader.refinement.missing.pipe
;; TEST-MENU-PATH: codegen/errors/reader/collections-refinements/atom.reader.error.reader.refinement.missing.pipe
;; TEST-ATOM-LEAF: atom.reader.error.reader.refinement.missing.pipe
;; TEST-CLI-TARGET: codegen errors reader collections-refinements

(module Main)
(type Positive { x ∈ Int (> x 0) })
